# aria

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
aria/: __init__.py  agent.py  cli.py  config.py
aria/integrations/: telegram.py
aria/memory/: learning.py  schema.sql  store.py
aria/tools/: __init__.py  calendar.py  code_exec.py  file_io.py  reminders.py  web_search.py
aria/ui/: app.py
aria/ui/templates/: base.html  chat.html
aria/voice/: interrupt.py  preprocess.py  stt.py  tts.py
